feat: cards box and scrollbar

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -8,10 +8,11 @@
 }
 
 body {
+    padding: 50px 20px;
     width: 100%;
     min-height: 100vh;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
     background-color: #ece6cd;
 }
