--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap");
+@import url("./colors.css");
 
 * {
     margin: 0;
@@ -14,5 +15,5 @@ body {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    background-color: #ece6cd;
+    background-color: var(--backgound-color);
 }
