--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -26,8 +26,13 @@ body {
     border: 0;
     outline: 0;
     border-bottom: 4px solid var(--dark-blue);
+    transition: border-bottom 0.2s;
     font-size: 60px;
     color: var(--dark-blue);
+}
+.inp-letter:focus {
+    border-bottom: 4px solid var(--cyan);
+    caret-color: transparent;
 }
 
 span.letter {
