add word check and word change

--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -4,6 +4,8 @@
     --dark-blue: #1a4a5a;
     --beige: #fcd8a6;
     --dark-beige: #efbc75;
+    --green: #a6e5ad;
+    --red: #f5b0ac;
 
     --size-elem-nav: 125px;
 }
