add the layout of the WarningPopup

--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -6,6 +6,7 @@
     --dark-beige: #efbc75;
     --green: #a6e5ad;
     --red: #f5b0ac;
+    --dark-red: #7e3935;
 
     --size-elem-nav: 100px;
     --size-nav-icon: 50px;
