fix position of navigation (fixed)

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -10,7 +10,7 @@
 
 body {
     width: 100%;
-    min-height: 100vh;
+    /*min-height: 100vh;*/
     display: flex;
     align-items: center;
     justify-content: flex-start;
