add result section to test

--- a/src/assets/colors.css
+++ b/src/assets/colors.css
@@ -5,6 +5,7 @@
     --beige: #fcd8a6;
     --dark-beige: #efbc75;
     --green: #a6e5ad;
+    --dark-green: #507855;
     --red: #f5b0ac;
     --dark-red: #7e3935;
 
